--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   angular: ^5.0.0
   angular_components: ^0.9.0
   angular_forms: ^2.0.0
+  angular_router: ^2.0.0-alpha+19
 
 dev_dependencies:
   angular_test: ^2.0.0
